--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,42 @@
 ---
-# defaults file for ansible-role-linux-vault
+# General parameters #
+vault_is_install: false # A boolean value, whether install the HashiCorp Vault.
+vault_version: '1.4.3' # Specify the Vault version.
+vault_path: '/data' # Specify the Consul data folder.
+vault_cluster: '' # Specifies the identifier for the Vault cluster.
+
+# Listen port #
+vault_port_arg: # Defines communication port.
+  api: '8200'
+  cluster: '8201'
+
+# Storage parameters #
+vault_storage_arg: 
+  stanza: 'raft' # Specify the location for the durable storage of Vault's information.
+
+# System Variables #
+vault_arg:
+  log_level: "Info" # Specifies the log level to use.
+  log_format: "standard" # Specifies the log format to use.
+  max_request_duration: "60s" # Specifies the maximum request duration allowed before Vault cancels the request.
+  http_read_header_timeout: "30s" # Specifies the amount of time allowed to read request headers.
+  user: 'vault' # Sets the Unix username that the processes are executed as.
+  uid: '2012' # Sets the Unix userID that the processes are executed as.
+
+# Service Mesh #
+environments: 'Development' # Define the service environment.
+datacenter: 'dc01' # Define the DataCenter.
+domain: 'local' # Define the Domain.
+#tags: # Define the service custom label.
+#  subscription: 'default'
+#  owner: 'nobody'
+#  department: 'Infrastructure'
+#  organization: 'The Company'
+#  region: 'China'
+exporter_is_install: false # Whether to install prometheus exporter.
+vault_public_register: false # Whether register a exporter service with public consul client.
+vault_public_exporter_token: '00000000-0000-0000-0000-000000000000' # Public Consul client ACL token.
+vault_public_http_prot: 'https' # The consul Hypertext Transfer Protocol.
+vault_public_http_port: '8500' # The consul Hypertext Transfer Port.
+vault_public_clients: # List of public consul clients.
+  - '127.0.0.1'
