--- a/tasks/certificates.yml
+++ b/tasks/certificates.yml
@@ -49,6 +49,7 @@
         subject_alt_name:
           - 'DNS:{{ ansible_hostname }}'
           - 'DNS:{{ ansible_fqdn }}'
+          - 'DNS:{{ group_names[-1] | upper | regex_replace("_", "-") }}-{{ environments | upper | regex_replace("_", "-") }}-vault.service.{{ datacenter | lower }}.{{ domain | lower }}'
           - 'DNS:{{ ansible_default_ipv4.address }}'
           - 'IP:{{ ansible_default_ipv4.address }}'
         owner: 'root'
