--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,4 +1,7 @@
 ---
+vault_epel_repo_name: 'epel'
+vault_epel_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/epel/{{ ansible_distribution_major_version }}/$basearch/'
+
 vault_dependent_packages:
   - 'python-pip'
   - 'openssl'
