--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,9 +46,9 @@ domain: 'local' # Define the Domain.
 #  organization: 'The Company'
 #  region: 'China'
 exporter_is_install: false # Whether to install prometheus exporter.
-vault_public_register: false # Whether register a exporter service with public consul client.
-vault_public_exporter_token: '00000000-0000-0000-0000-000000000000' # Public Consul client ACL token.
-vault_public_http_prot: 'https' # The consul Hypertext Transfer Protocol.
-vault_public_http_port: '8500' # The consul Hypertext Transfer Port.
-vault_public_clients: # List of public consul clients.
+consul_public_register: false # Whether register a exporter service with public consul client.
+consul_public_exporter_token: '00000000-0000-0000-0000-000000000000' # Public Consul client ACL token.
+consul_public_http_prot: 'https' # The consul Hypertext Transfer Protocol.
+consul_public_http_port: '8500' # The consul Hypertext Transfer Port.
+consul_public_clients: # List of public consul clients.
   - '127.0.0.1'
