--- a/tasks/configureation.yml
+++ b/tasks/configureation.yml
@@ -8,6 +8,11 @@
     mode: '0640'
   register: vault_config_update
 
+- name: Check if Vault systemd service file exists.
+  stat:
+    path: '/lib/systemd/system/vault.service'
+  register: vault_systemd_result
+
 - name: Vault systemd service file transfer.
   template:
     src: 'vault.service.j2'
@@ -16,3 +21,4 @@
     group: 'root'
     mode: '0644'
   register: vault_systemd_update
+  when: not vault_systemd_result.stat.exists
