modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/RedHat.yml 	modified:   tasks/auto-unseal.yml 	modified:   tasks/backup.yml 	modified:   tasks/certificates.yml 	modified:   tasks/configureation.yml 	deleted:    tasks/install.yml 	modified:   tasks/main.yml 	modified:   tasks/register.yml 	modified:   templates/vault.hcl.j2 	deleted:    templates/vault.service.j2 	modified:   templates/vault_backup.sh.j2 	modified:   templates/vault_unseal.sh.j2 	modified:   vars/RedHat.yml 	modified:   vars/main.yml

--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -39,3 +39,23 @@
   until: yum_status is succeeded
   retries: 5
   delay: 2
+
+- name: Add Hashicorp YUM repositories.
+  yum_repository:
+    name: '{{ vault_repo_name }}'
+    description: '{{ vault_repo_name }} YUM repository'
+    file: '{{ vault_repo_name }}'
+    baseurl: '{{ vault_repo_url }}'
+    gpgcheck: 'no'
+    timeout: '60'
+
+- name: Install the Vault.
+  yum:
+    name: '{{ vault_packages }}'
+    state: 'present'
+    validate_certs: 'no'
+    disable_gpg_check: 'yes'
+  register: vault_upgrade
+  until: vault_upgrade is succeeded
+  retries: 5
+  delay: 2
