--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -2,8 +2,14 @@
 vault_epel_repo_name: 'epel'
 vault_epel_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/epel/{{ ansible_distribution_major_version }}/$basearch/'
 
+vault_repo_name: 'hashicorp'
+vault_repo_url: 'https://rpm.releases.hashicorp.com/RHEL/$releasever/$basearch/stable/'
+
 vault_dependent_packages:
   - 'python-pip'
   - 'openssl'
   - 'libselinux-utils'
   - 'policycoreutils-python'
+
+vault_packages:
+  - 'vault-{{ vault_version }}*'
