--- a/tasks/auto-unseal.yml
+++ b/tasks/auto-unseal.yml
@@ -3,8 +3,8 @@
   template:
     src: 'vault_unseal.sh.j2'
     dest: '/usr/local/bin/vault_unseal.sh'
-    owner: '{{ vault_arg.user }}'
-    group: '{{ vault_arg.user }}'
+    owner: 'vault'
+    group: 'vault'
     mode: '0640'
 
 - name: Vault auto-unseal script add.
