--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -8,7 +8,7 @@
     mode: '{{ item.mode }}'
   loop:
     - { path: 'backup', owner: 'root', mode: '0755' }
-    - { path: 'backup/vault', owner: '{{ vault_arg.user }}', mode: '0750' }
+    - { path: 'backup/vault', owner: 'vault', mode: '0750' }
 
 - name: Creating Rclone configureation folder.
   file:
@@ -25,8 +25,8 @@
   template:
     src: 'rclone.conf.j2'
     dest: '/etc/rclone/vault.conf'
-    owner: '{{ vault_arg.user }}'
-    group: '{{ vault_arg.user }}'
+    owner: 'vault'
+    group: 'vault'
     mode: '640'
   when:
     - vault_backupset_arg.cloud_rsync | bool
@@ -36,13 +36,13 @@
   template:
     src: 'vault_backup.sh.j2'
     dest: '/usr/local/bin/vault_backup.sh'
-    owner: '{{ vault_arg.user }}'
-    group: '{{ vault_arg.user }}'
+    owner: 'vault'
+    group: 'vault'
     mode: '640'
 
 - name : Vault backup job.
   cron:
-    user: '{{ vault_arg.user }}'
+    user: 'vault'
     name: 'Vault Snapshot backup'
     minute: "{{ 60 | random(seed=inventory_hostname) }}"
     hour: "{{ 6 | random(seed=inventory_hostname,step=1) }}"
