--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # General parameters #
 vault_is_install: false # A boolean value, whether install the HashiCorp Vault.
-vault_version: '1.5.5' # Specify the Vault version.
+vault_version: '1.5.6' # Specify the Vault version.
 vault_path: '/data' # Specify the Consul data folder.
 vault_tls: true # A boolean value, whether Encrypting client and cluster communications.
 
@@ -34,9 +34,10 @@ vault_arg:
   http_read_header_timeout: '30s' # Specifies the amount of time allowed to read request headers.
 
 # Service Mesh #
-environments: 'Development' # Define the service environment.
+environments: 'prd' # Define the service environment.
 datacenter: 'dc01' # Define the DataCenter.
 domain: 'local' # Define the Domain.
+customer: 'demo' # Define the customer name.
 #tags: # Define the service custom label.
 #  subscription: 'default'
 #  owner: 'nobody'
