--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -44,7 +44,7 @@
   cron:
     user: 'vault'
     name: 'Vault Snapshot backup'
-    minute: "{{ 60 | random(seed=inventory_hostname) }}"
-    hour: "{{ 6 | random(seed=inventory_hostname,step=1) }}"
+    minute: "{{ 60 | random(seed=ansible_hostname) }}"
+    hour: "{{ 6 | random(seed=ansible_hostname,step=1) }}"
     job: '/bin/sh /usr/local/bin/vault_backup.sh'
   no_log: true
