--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,7 +5,9 @@ vault_cert_path: '/etc/vault.d/ssl'
 
 vault_python_dependent_packages:
   - 'pip==20.3.4'
-  - 'cryptography'
+  - 'cryptography==2.4.2'
+  - 'paramiko==2.4.3'
+  - 'pyopenssl==19.0.0'
 
 vault_auth_methods: 
   - 'approle'
