--- a/tasks/certificates.yml
+++ b/tasks/certificates.yml
@@ -3,7 +3,7 @@
   pip:
     name: '{{ vault_python_dependent_packages }}'
     state: 'forcereinstall'
-    extra_args: '--default-timeout=120 --ignore-installed -i https://{{ vault_pypi_url }}/simple --trusted-host {{ vault_pypi_url }}'
+    extra_args: '--default-timeout=120 -i https://{{ vault_pypi_url }}/simple --trusted-host {{ vault_pypi_url }}'
   register: vault_python_status
   until: vault_python_status is succeeded
   retries: 5
